--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -62,8 +62,8 @@ flutter:
   uses-material-design: true
   generate: true
   # To add assets to your application, add an assets section, like this:
-  #  assets:
-  #    - assets/vouchers.png
+  assets:
+    - assets/welcome_screen/
   #    - assets/tickets.png
   #   - images/a_dot_ham.jpeg
 
