Added login screen, some fixes

--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.0.0
   font_awesome_flutter: ^10.1.0
+  flutter_inappwebview: ^5.3.2
 
 dev_dependencies:
   flutter_test:
