--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_inappwebview: ^5.3.2
   equatable: ^2.0.3
   event_bus: ^2.0.0
+  google_sign_in: ^5.3.0
 
 dev_dependencies:
   flutter_test:
@@ -49,3 +50,4 @@ flutter:
 
   assets:
     - assets/welcome_screen/
+    - assets/login_screen/
