--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -5,16 +5,16 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+# Version: A.B.C+X.
+# For Android:
+# A.B.C represents the versionName such as 1.0.0.
+# X (the number after the +) represents the versionCode such as 1, 2, 3, etc.
+#
+# For iOS:
+# A.B.C represents the CFBundleShortVersionString such as 1.0.0.
+# X (the number after the +) represents the CFBundleVersion such as 1, 2, 3, etc.
+#
+# Do not forget to execute flutter build apk / flutter build ipa or flutter run after this step
 version: 1.0.0+1
 
 environment:
