--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # X (the number after the +) represents the CFBundleVersion such as 1, 2, 3, etc.
 #
 # Do not forget to execute flutter build apk / flutter build ipa or flutter run after this step
-version: 1.0.3+1
+version: 1.1.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -36,6 +36,8 @@ dependencies:
   equatable: ^2.0.3
   event_bus: ^2.0.0
   google_sign_in: ^5.3.0
+  another_flushbar: ^1.10.28
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
