--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   http: ^0.13.4
   qr_flutter: ^4.0.0
   font_awesome_flutter: ^10.1.0
-  flutter_inappwebview: ^5.3.2
+  webview_flutter: ^3.0.2
   equatable: ^2.0.3
   event_bus: ^2.0.0
   google_sign_in: ^5.3.0
