--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.1.0
+  build_runner: ^2.1.10
 
   flutter_lints: ^1.0.4
   intl: ^0.17.0
