--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_sign_in: ^5.3.0
   another_flushbar: ^1.10.28
   pull_to_refresh: ^2.0.0
+  simple_connection_checker: ^0.2.1
 
 dev_dependencies:
   flutter_test:
