--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # X (the number after the +) represents the CFBundleVersion such as 1, 2, 3, etc.
 #
 # Do not forget to execute flutter build apk / flutter build ipa or flutter run after this step
-version: 1.3.1+1
+version: 1.4.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -55,3 +55,4 @@ flutter:
   assets:
     - assets/welcome_screen/
     - assets/login_screen/
+    - assets/ski_lifts/
