--- a/ski_slope/pubspec.yaml
+++ b/ski_slope/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # X (the number after the +) represents the CFBundleVersion such as 1, 2, 3, etc.
 #
 # Do not forget to execute flutter build apk / flutter build ipa or flutter run after this step
-version: 1.4.0+1
+version: 1.4.1+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -27,23 +27,23 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.4
-  bloc_pattern: ^3.0.0+1
-  shared_preferences: ^2.0.14
+  bloc_pattern: ^3.0.1
+  shared_preferences: ^2.0.15
   http: ^0.13.4
   qr_flutter: ^4.0.0
   font_awesome_flutter: ^10.1.0
-  webview_flutter: ^3.0.2
+  webview_flutter: ^3.0.4
   equatable: ^2.0.3
   event_bus: ^2.0.0
-  another_flushbar: ^1.10.28
+  another_flushbar: 1.10.28
   pull_to_refresh: ^2.0.0
   simple_connection_checker: ^0.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: ^5.1.0
-  build_runner: ^2.1.10
+  mockito: ^5.2.0
+  build_runner: ^2.1.11
 
   flutter_lints: ^1.0.4
   intl: ^0.17.0
